--- a/register _landlord.html
+++ b/register _landlord.html
@@ -1,75 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>X-HOMES | Register Landlord</title>
+  <title>X-HOMES | Landlord Registration</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: #f4f6fb;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .register-container {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+    h2 {
+      text-align: center;
+      color: navy;
+      margin-bottom: 20px;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: 600;
+      color: #333;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-top: 6px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 14px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background: navy;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      margin-top: 20px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    button:hover {
+      background: darkred;
+    }
+    .link {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 14px;
+    }
+    .link a {
+      color: navy;
+      text-decoration: none;
+    }
+    .link a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <div class="register-container">
+    <h2>Landlord Registration</h2>
+    <form id="landlordRegisterForm">
+      <label>Full Name</label>
+      <input type="text" id="name" required>
+
+      <label>Email</label>
+      <input type="email" id="email" required>
+
+      <label>Phone Number</label>
+      <input type="text" id="phone" required>
+
+      <label>Ghana Card ID</label>
+      <input type="text" id="ghanaCard" required>
+
+      <label>Location / Address</label>
+      <input type="text" id="address" required>
+
+      <label>Password</label>
+      <input type="password" id="password" required>
+
+      <button type="submit">Register</button>
+    </form>
+    <div class="link">
+      Already have an account? <a href="login.html">Login here</a>
+    </div>
+  </div>
+
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
-</head>
-<body>
-  <h2>Register as Landlord</h2>
-  <form id="registerForm">
-    <input type="text" id="name" placeholder="Full Name" required><br><br>
-    <input type="text" id="phone" placeholder="Phone Number" required><br><br>
-    <input type="text" id="ghanaCard" placeholder="Ghana Card ID" required><br><br>
-    <input type="email" id="email" placeholder="Email Address" required><br><br>
-    <input type="password" id="password" placeholder="Password" required><br><br>
-    <button type="submit">Register</button>
-  </form>
-
-  <p id="msg"></p>
-
   <script>
-   // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+    // 🔹 Replace with your Firebase config
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
+    };
 
-// Your web app's Firebase configuration
-const firebaseConfig = {
-  apiKey: "AIzaSyAouk2Vs5ApZaNT23yITk9tCqZFDLhloHQ",
-  authDomain: "x-homes-2e244.firebaseapp.com",
-  projectId: "x-homes-2e244",
-  storageBucket: "x-homes-2e244.firebasestorage.app",
-  messagingSenderId: "807749759634",
-  appId: "1:807749759634:web:b01b0707abdea703ceec4b"
-};
-
-    // Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.firestore();
 
-    document.getElementById("registerForm").addEventListener("submit", async (e) => {
+    document.getElementById("landlordRegisterForm").addEventListener("submit", async (e) => {
       e.preventDefault();
 
       const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
       const phone = document.getElementById("phone").value;
       const ghanaCard = document.getElementById("ghanaCard").value;
-      const email = document.getElementById("email").value;
+      const address = document.getElementById("address").value;
       const password = document.getElementById("password").value;
 
       try {
-        // Create user in Firebase Auth
-        const userCred = await auth.createUserWithEmailAndPassword(email, password);
-        const uid = userCred.user.uid;
+        const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+        const user = userCredential.user;
 
-        // Save extra details in Firestore
-        await db.collection("users").doc(uid).set({
-          name,
-          phone,
-          ghanaCard,
-          email,
-          role: "landlord",
-          createdAt: new Date()
+        await db.collection("landlords").doc(user.uid).set({
+          name, email, phone, ghanaCard, address, createdAt: new Date()
         });
 
-        document.getElementById("msg").innerText = "✅ Registered successfully!";
-        setTimeout(() => { window.location.href = "login.html"; }, 2000);
-
+        alert("Registration successful! Please log in.");
+        window.location.href = "login.html";
       } catch (error) {
-        document.getElementById("msg").innerText = "❌ " + error.message;
+        alert("Error: " + error.message);
       }
     });
   </script>
