--- a/landlord_dashboard.html
+++ b/landlord_dashboard.html
@@ -1,178 +1,180 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>X-HOMES | Landlord Dashboard</title>
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage.js"></script>
-  <!-- Google Maps API (replace YOUR_API_KEY with your key) -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    #map { width: 100%; height: 300px; margin: 10px 0; }
-    img { border-radius: 8px; margin-top: 5px; }
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: #f4f6fb;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: darkred;
+      color: white;
+      padding: 15px;
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+    }
+    .container {
+      max-width: 900px;
+      margin: 20px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: darkred;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: 600;
+      color: #333;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-top: 6px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 14px;
+    }
+    button {
+      padding: 10px 16px;
+      background: navy;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 15px;
+    }
+    button:hover {
+      background: darkred;
+    }
+    .logout {
+      text-align: right;
+      margin-top: 10px;
+    }
+    .logout button {
+      background: crimson;
+      color: white;
+      padding: 6px 12px;
+      border-radius: 6px;
+    }
+    .property-list {
+      margin-top: 20px;
+    }
+    .property-card {
+      background: #f9f9f9;
+      border: 1px solid #ddd;
+      padding: 15px;
+      border-radius: 10px;
+      margin-top: 15px;
+    }
+    .property-card h3 {
+      margin: 0 0 10px;
+      color: navy;
+    }
   </style>
 </head>
 <body>
-  <h2>Landlord Dashboard</h2>
-  <button onclick="logout()">Logout</button>
+  <header>Landlord Dashboard</header>
+  <div class="container">
+    <div class="logout">
+      <button onclick="logout()">Logout</button>
+    </div>
 
-  <h3>Upload New Property</h3>
-  <form id="propertyForm">
-    <input type="text" id="propertyName" placeholder="Property Name" required><br><br>
-    <input type="text" id="location" placeholder="Location (e.g. Kumasi - Kejetia)" required><br><br>
-    <input type="number" id="rent" placeholder="Monthly Rent (GHS)" required><br><br>
-    <input type="number" id="rooms" placeholder="Number of Rooms Available" required><br><br>
-    <textarea id="amenities" placeholder="Amenities (e.g. Near school, hospital, market)" required></textarea><br><br>
-    <input type="file" id="image" accept="image/*" required><br><br>
+    <h2>Upload a Property</h2>
+    <form id="propertyForm">
+      <label>Property Title</label>
+      <input type="text" id="title" required>
 
-    <!-- Google Map -->
-    <label><b>Select Property Location on Map:</b></label>
-    <div id="map"></div>
-    <input type="hidden" id="lat">
-    <input type="hidden" id="lng">
+      <label>Location</label>
+      <input type="text" id="location" required>
 
-    <button type="submit">Add Property</button>
-  </form>
+      <label>Monthly Rent (GHS)</label>
+      <input type="number" id="price" required>
 
-  <p id="msg"></p>
+      <button type="submit">Add Property</button>
+    </form>
 
-  <h3>Your Properties</h3>
-  <ul id="propertyList"></ul>
+    <h2>Your Listings</h2>
+    <div class="property-list" id="propertyList"></div>
+  </div>
 
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
   <script>
-   // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
+    };
 
-// Your web app's Firebase configuration
-const firebaseConfig = {
-  apiKey: "AIzaSyAouk2Vs5ApZaNT23yITk9tCqZFDLhloHQ",
-  authDomain: "x-homes-2e244.firebaseapp.com",
-  projectId: "x-homes-2e244",
-  storageBucket: "x-homes-2e244.firebasestorage.app",
-  messagingSenderId: "807749759634",
-  appId: "1:807749759634:web:b01b0707abdea703ceec4b"
-};
-
-    // Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.firestore();
-    const storage = firebase.storage();
 
-    let map, marker;
+    const propertyForm = document.getElementById("propertyForm");
+    const propertyList = document.getElementById("propertyList");
 
-    // Initialize Google Map
-    function initMap() {
-      const defaultLocation = { lat: 7.9465, lng: -1.0232 }; // Ghana center
-      map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 7,
-        center: defaultLocation
-      });
-
-      // Click to set marker
-      map.addListener("click", (e) => {
-        const lat = e.latLng.lat();
-        const lng = e.latLng.lng();
-
-        if (marker) marker.setMap(null); // remove old marker
-        marker = new google.maps.Marker({
-          position: { lat, lng },
-          map: map
-        });
-
-        document.getElementById("lat").value = lat;
-        document.getElementById("lng").value = lng;
-      });
-    }
-
-    window.onload = initMap;
-
-    // Check if landlord is logged in
-    auth.onAuthStateChanged(async (user) => {
-      if (!user) {
-        window.location.href = "login.html";
-      } else {
-        loadProperties(user.uid);
-      }
-    });
-
-    // Handle Property Upload
-    document.getElementById("propertyForm").addEventListener("submit", async (e) => {
+    propertyForm.addEventListener("submit", async (e) => {
       e.preventDefault();
-      const user = auth.currentUser;
-      if (!user) return;
 
-      const propertyName = document.getElementById("propertyName").value;
+      const title = document.getElementById("title").value;
       const location = document.getElementById("location").value;
-      const rent = document.getElementById("rent").value;
-      const rooms = document.getElementById("rooms").value;
-      const amenities = document.getElementById("amenities").value;
-      const lat = document.getElementById("lat").value;
-      const lng = document.getElementById("lng").value;
-      const imageFile = document.getElementById("image").files[0];
+      const price = document.getElementById("price").value;
 
-      if (!lat || !lng) {
-        document.getElementById("msg").innerText = "❌ Please select a property location on the map!";
+      const user = auth.currentUser;
+      if (!user) {
+        alert("Please login first.");
         return;
       }
 
-      try {
-        // Upload image to Firebase Storage
-        const storageRef = storage.ref("properties/" + user.uid + "/" + Date.now() + "_" + imageFile.name);
-        await storageRef.put(imageFile);
-        const imageUrl = await storageRef.getDownloadURL();
+      await db.collection("properties").add({
+        title,
+        location,
+        price,
+        ownerId: user.uid,
+        createdAt: new Date()
+      });
 
-        // Save property details in Firestore
-        await db.collection("properties").add({
-          landlordId: user.uid,
-          propertyName,
-          location,
-          rent: parseFloat(rent),
-          rooms: parseInt(rooms),
-          amenities,
-          lat: parseFloat(lat),
-          lng: parseFloat(lng),
-          imageUrl,
-          createdAt: new Date()
-        });
-
-        document.getElementById("msg").innerText = "✅ Property added successfully!";
-        loadProperties(user.uid);
-        document.getElementById("propertyForm").reset();
-        if (marker) marker.setMap(null);
-
-      } catch (error) {
-        document.getElementById("msg").innerText = "❌ " + error.message;
-      }
+      propertyForm.reset();
+      loadProperties();
     });
 
-    // Load landlord properties
-    async function loadProperties(landlordId) {
-      const list = document.getElementById("propertyList");
-      list.innerHTML = "";
-      const snapshot = await db.collection("properties").where("landlordId", "==", landlordId).get();
+    async function loadProperties() {
+      const user = auth.currentUser;
+      if (!user) return;
+
+      const snapshot = await db.collection("properties")
+        .where("ownerId", "==", user.uid)
+        .get();
+
+      propertyList.innerHTML = "";
       snapshot.forEach(doc => {
-        const data = doc.data();
-        const li = document.createElement("li");
-        li.innerHTML = `
-          <strong>${data.propertyName}</strong> <br>
-          Location: ${data.location} <br>
-          Rent: GHS ${data.rent}/month <br>
-          Rooms: ${data.rooms} <br>
-          Amenities: ${data.amenities} <br>
-          Coordinates: (${data.lat}, ${data.lng}) <br>
-          <img src="${data.imageUrl}" width="200"> <br><br>
+        const p = doc.data();
+        const div = document.createElement("div");
+        div.classList.add("property-card");
+        div.innerHTML = `
+          <h3>${p.title}</h3>
+          <p><strong>Location:</strong> ${p.location}</p>
+          <p><strong>Price:</strong> GHS ${p.price}/month</p>
         `;
-        list.appendChild(li);
+        propertyList.appendChild(div);
       });
     }
 
-    // Logout function
+    auth.onAuthStateChanged(user => {
+      if (user) loadProperties();
+    });
+
     function logout() {
       auth.signOut().then(() => {
         window.location.href = "login.html";
