--- a/tenant_dashboard.html
+++ b/tenant_dashboard.html
@@ -1,168 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>X-HOMES | Tenant Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: #f4f6fb;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: navy;
-      color: white;
-      padding: 15px;
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    .container {
-      max-width: 900px;
-      margin: 20px auto;
-      padding: 20px;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: navy;
-    }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    .property-card {
-      background: #f9f9f9;
-      border: 1px solid #ddd;
-      padding: 15px;
-      border-radius: 10px;
-      margin-top: 15px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
-    .property-card h3 {
-      margin: 0 0 10px;
-      color: darkred;
-    }
-    .actions {
-      margin-top: 10px;
-    }
-    button {
-      padding: 8px 12px;
-      margin-right: 8px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .notify-btn {
-      background: navy;
-      color: white;
-    }
-    .notify-btn:hover {
-      background: darkred;
-    }
-    .book-btn {
-      background: green;
-      color: white;
-    }
-    .book-btn:hover {
-      background: darkgreen;
-    }
-    .logout {
-      text-align: right;
-      margin-top: 10px;
-    }
-    .logout button {
-      background: crimson;
-      color: white;
-      padding: 6px 12px;
-      border-radius: 6px;
-    }
-  </style>
-</head>
-<body>
-  <header>Tenant Dashboard</header>
-  <div class="container">
-    <div class="logout">
-      <button onclick="logout()">Logout</button>
-    </div>
-    <h2>Find a Property</h2>
-    <input type="text" id="searchBox" placeholder="Search by location (e.g. Kumasi, Kejetia)">
-    <div id="propertyList"></div>
-  </div>
+...
+<div id="propertyList"></div>
+<div id="map" style="height:400px; margin-top:20px; border-radius:10px;"></div>
+...
+<script>
+  let map, marker;
 
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
-  <script>
-    // 🔹 Firebase config
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-    };
-
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-
-    const propertyList = document.getElementById("propertyList");
-    const searchBox = document.getElementById("searchBox");
-
-    // Fetch properties
-    async function loadProperties() {
-      const snapshot = await db.collection("properties").get();
-      displayProperties(snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() })));
-    }
-
-    function displayProperties(properties) {
-      propertyList.innerHTML = "";
-      properties.forEach(p => {
-        const div = document.createElement("div");
-        div.classList.add("property-card");
-        div.innerHTML = `
-          <h3>${p.title || "Room for Rent"}</h3>
-          <p><strong>Location:</strong> ${p.location}</p>
-          <p><strong>Price:</strong> GHS ${p.price}/month</p>
-          <div class="actions">
-            <button class="notify-btn" onclick="notifyLandlord('${p.ownerId}')">Notify Landlord</button>
-            <button class="book-btn" onclick="bookNow('${p.id}')">Book Now</button>
-          </div>
-        `;
-        propertyList.appendChild(div);
-      });
-    }
-
-    function notifyLandlord(landlordId) {
-      alert("Notification sent to landlord: " + landlordId);
-    }
-
-    function bookNow(propertyId) {
-      alert("Booking started for property: " + propertyId);
-    }
-
-    function logout() {
-      auth.signOut().then(() => {
-        window.location.href = "login.html";
-      });
-    }
-
-    searchBox.addEventListener("input", async () => {
-      const value = searchBox.value.toLowerCase();
-      const snapshot = await db.collection("properties")
-        .where("location", ">=", value)
-        .where("location", "<=", value + "\uf8ff")
-        .get();
-      displayProperties(snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() })));
+  function initMap() {
+    map = new google.maps.Map(document.getElementById("map"), {
+      center: { lat: 6.6924, lng: -1.6230 }, // Default Kumasi
+      zoom: 12,
     });
+  }
 
-    loadProperties();
-  </script>
-</body>
-</html>
+  function showOnMap(lat, lng) {
+    if (marker) marker.setMap(null);
+    const pos = { lat, lng };
+    marker = new google.maps.Marker({ position: pos, map: map });
+    map.setCenter(pos);
+    map.setZoom(15);
+  }
+
+  function displayProperties(properties) {
+    propertyList.innerHTML = "";
+    properties.forEach(p => {
+      const div = document.createElement("div");
+      div.classList.add("property-card");
+      div.innerHTML = `
+        <h3>${p.title || "Room for Rent"}</h3>
+        <p><strong>Location:</strong> ${p.location}</p>
+        <p><strong>Price:</strong> GHS ${p.price}/month</p>
+        <div class="actions">
+          <button class="notify-btn" onclick="notifyLandlord('${p.ownerId}')">Notify Landlord</button>
+          <button class="book-btn" onclick="bookNow('${p.id}')">Book Now</button>
+          <button onclick="showOnMap(${p.lat}, ${p.lng})">View on Map</button>
+        </div>
+      `;
+      propertyList.appendChild(div);
+    });
+  }
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap"></script>
